--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,94 @@
-main{
-    width: 375px;
-    height: 768px;
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+:root{
+
+    --Very-dark-desaturated-blue: hsl(238, 29%, 16%);
+    --Soft-red: hsl(14, 88%, 65%);
+/* Background gradient: */
+
+    --Soft-violet: hsl(273, 75%, 66%);
+    --Soft-blue: hsl(240, 73%, 65%);
+/* #### Text */
+    --Very-dark-grayish-blue: hsl(237, 12%, 33%);
+    --Dark-grayish-blue: hsl(240, 6%, 50%);
+/* #### Dividers */
+    --Light-grayish-blue: hsl(240, 5%, 91%);
+    --white: #ffff
+
 }
 
+body{
+    font-family: 'Kumbh Sans', sans-serif;
+    background: linear-gradient(180deg, var(--Soft-violet), var(--Soft-blue));
+    height: 100vh;
+    font-size: 12px;
+}
+main{
+    background-color: var(--white);
+    width: 330px;
+    min-height: 540px;
+    margin: 147px auto 30px;
+    border-radius: 24px;
+    box-shadow: 0 10px 40px var(--Very-dark-desaturated-blue);
+    padding: 24px;
+}
+.main-container__s1__image{
+    display: block;
+    width: 240px;
+    margin: -130px auto 0;
+}
+.main-container__s1__image--shadow{
+    content: url(./images/bg-pattern-mobile.svg);
+    margin: -75px auto 0;
+    width: 240px;
+}
+.main-container__s2__title{
+    margin: 24px 0 30px;
+    font-size: 2em;
+    text-align: center;
+}
+.main-container__s2__details{
+    margin: 16px 0;
+    font-size: 1.2em;
+    position: relative;
+
+}
+.main-container__s2__details[open]{
+    font-weight: 700;
+}
+.main-container__s2__details[open] .main-container__s2__details__arrow{
+    transform: rotate(180deg);
+    transition: 300ms; /* animacion Para abrir*/
+}
+.main-container__s2__details__summary{
+    list-style: none; /*esconde la flecha por defecto del summary*/
+    
+}
+.main-container__s2__details__summary:hover{
+    cursor: pointer;
+    color: var(--Soft-red);
+    font-weight: 700;
+}
+
+.main-container__s2__details__paragraph{
+    color: var(--Dark-grayish-blue);
+    font-weight: 400;
+    margin: 10px 0 ;
+}
+
+.main-container__s2__details__arrow{
+    position: absolute;
+    right: 5px;
+    transition: 300ms; /*amimacion para cerrar*/
+}
+.main-container__s2__line{
+    border-color: transparent;
+    border-bottom-color: var(--Light-grayish-blue);
+}
 
 .attribution { 
     font-size: 11px; 
@@ -10,6 +96,39 @@ main{
  }
 
 .attribution a { 
-    color: hsl(228, 45%, 44%); 
+    color: var(--Light-grayish-blue);
 }
 
+/*--------------------------------Desktop-----------------*/
+@media (min-width: 1044px){
+    main{
+        width: 920px;
+        min-height: 512px;
+        display: flex;
+        background-image: url("./images/bg-pattern-desktop.svg");
+        background-position-x: -535px;
+        background-position-y: -281px;
+        background-repeat: no-repeat;
+        background-size: 100%;
+    }
+    section{
+        width: 100%;
+    }
+    .main-container__s1__image{
+        width: 474px;
+        margin: 67px 0 0 -130px;
+    }
+    .main-container__s1__image--shadow{
+        content: ''; /*Esto oculta esta clase*/
+    }
+    .main-container__s2{
+        padding: 9px 80px 20px 40px;
+    }
+    .main-container__s2__title{
+        text-align: left;
+        margin-bottom: 39px;
+    }
+    .main-container__s2__details{
+        margin: 24px 0;
+    }
+}
